--- a/AoC/Gemfile
+++ b/AoC/Gemfile
@@ -1,10 +1,11 @@
-source "https://rubygems.org"
+source 'https://rubygems.org'
 
 ruby '3.0.3'
 
+gem 'byebug'
 gem 'dotenv'
 gem 'httparty'
 gem 'rspec'
-gem 'rubocop', require: false
 gem 'rspec-core'
+gem 'rubocop', require: false
 gem 'thor'
